2.36 (0000-00-00)
Libraries:
- libgwydgets: Igor Pro .itx graph ASCII export option was added.

Modules:
- MetroPro: Files wiht header formats 2 and 3 are recognised and imported.
- Omicron: Value offsets in grid spectra were corrected.


2.35 (2014-03-02)
Application:
- A log of data modification operations is recorded for each channel and volume
  data. A viewer of data processing operation log is available in the
  right-click menus.  Logging can be enabled and disabled in the Edit menu.
- A workaround for toolbox menus disapparing in Unity was implemented.
- Translations updated: Czech, French, Russian.

Libraries:
- libgwyapp: Functions for logging of data processing operations were added.
- libgwyapp: Missing brick containers items were added to validation and file
  merging operations.
- libgwyprocess: gwy_data_field_grains_get_distribution() no longer incorrectly
  includes the no-grains value in the resulting distribution.
- libgwyddion: GwyStringList has new functions for clearing and adding a string
  with taking the ownership.
- libgwyprocess: A function for removing grains by number was added.
- libgwydgets: Graph window shows reasonable cursor coordinates with
  logscale axes.

Modules:
- Data processing, file and volume modules: Support for logging was added.
- Rank (new): Rank transform-based local constrast ehnancement presentation.
- OME TIFF (new): Import Opem Microscopy Environment (OME) TIFF files.
- Accurex II TXT (new): Imports Accurex II text data files.
- HDR image: 32bit and 64bit integer samples as well as 32bit and 64bit
  floating point samples are supported.  Plain BigTIFF images can be loaded.
- APE file: Metadata handling for different SPM modes was improved.
- nanoscantech: Problems with loading 4d jumping mode spectroscopy fixed.
- NT-MDT: Hybrid mode is loaded with distance calibration,
  precalculated datafields are loaded from hybrid-mode data.
- Scale: Rouding of scaling ratio to some odd values was fixed.