@@ -5,6 +5,7 @@ Libraries:
 Modules:
 - MetroPro: Files wiht header formats 2 and 3 are recognised and imported.
 - Omicron: Value offsets in grid spectra were corrected.
+- Read value: Local curvature at cursor is also calculated and displayed.
 
 
 2.35 (2014-03-02)
